--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "MonopolyETSE",
+            "request": "launch",
+            "mainClass": "monopoly.MonopolyETSE",
+            "projectName": "Monopoly__85a841ad"
+        },
+        {
+            "type": "java",
             "name": "Current File",
             "request": "launch",
             "mainClass": "${file}"
