--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,6 +9,13 @@
             "name": "MonopolyETSE",
             "request": "launch",
             "mainClass": "monopoly.MonopolyETSE",
+            "projectName": "Monopoly__3440a2c6"
+        },
+        {
+            "type": "java",
+            "name": "MonopolyETSE",
+            "request": "launch",
+            "mainClass": "monopoly.MonopolyETSE",
             "projectName": "Monopoly__85a841ad"
         },
         {
